# MINXG-Beta

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  EXTENSIONS.md  LAUNCH_PLAN.md  LICENSE  MULTILINGUAL.md  Makefile  PROJECT_INDEX.md  PROJECT_INDEX.zh.md  PUSH_NOW.md  README.md  README_MCP.md  RENAME_PROPOSAL.md  SELF_EVOLUTION.md  SELLING_POINTS.md  bmh_test.c  config.example.yaml  config.yaml  constraints-termux.txt  docker-compose.yml  install.sh  mini_test.c  native_integration.py  pyproject.toml  release-please-config.json  requirements.txt  simple_test.c
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
agent/: __init__.py  conversation_loop.py  iteration_budget.py
assets/: README.md
c_core/: crypto_shim.c  debug_test.c  mem_pool.c  mem_pool.h  minxg_arch.c  minxg_arch.h  minxg_evolve.c  minxg_evolve.h  simple_bmh.c  text_engine.c  text_engine.h
config/: README.md  gateway.yaml  minxg.yaml
config/templates/: README.md  __init__.py  sample.yaml
cpp_core/: CMakeLists.txt  cpp_wrapper.c
cpp_core/include/: minxg_guard.hpp
cpp_core/python/: pybind_module.cpp
cpp_core/src/: base.cpp  base.hpp  compress.cpp  compress.hpp  crypto.cpp  crypto.hpp  data_proc.cpp  data_proc.hpp  encoding.cpp  encoding.hpp  file_ops.cpp  file_ops.hpp  guard.cpp  json_fast.cpp  json_fast.hpp  json_stringify.cpp  ringbuf.hpp
docs/: ARCHITECTURE.md  BENCHMARK.md  DRIVER.md  PILLARS.md  README.md
docs/archive/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  EXTENSIONS.md  INSTALL.md  OPERATORS.md  PUSH.md  QUICKSTART.md  TIDAL_LOCK.md
docs/developers/: README.md
docs/users/: README.md
examples/: 01_geometric_algebra.py  02_category_theory.py  03_information_geometry.py  04_algebraic_topology.py  05_dynamical_systems.py  06_fiber_bundles.py  07_mixed_pipeline.py  README.md  __init__.py  agent_demo.py  basic_usage.py  custom_tool.py  workflow_demo.py
extensions/: README.md  __init__.py  import_wizard.py  loader.py  package_cli.py
extensions/builtin/: __init__.py  hello.py  list_ext.py
extensions/user/: README.md  __init__.py
extensions/zipscan/: __init__.py  manifest.yaml
gateway/: __init__.py  channel_discord.py  channel_slack.py  channel_telegram.py  channels.py  config.py  inference.py  rag.py  router.py  runner.py  server.py  workspace.py
go_core/: go.mod  libminxg_go.h
go_core/bridge/: cgo_bridge.go
go_core/cmd/: README.md
go_core/export/: minxg.go
go_core/health/: checker.go
go_core/ratelimit/: token_bucket.go
go_core/server/: gateway.go  proxy.go
go_core/ws/: hub.go
minxg/: __init__.py  _config.py  _version.py  adb_tools.py  ai_tools.py  archive_tools.py  base.py  benchmark_tools.py  caching.py  cloud_tools.py  color_tools.py  core_native.py  crypto_tools.py  data_tools.py  datetime_tools.py  db_tools.py  dev_tools.py  encoding_tools.py  events.py  extension_api.py  fs_copy.py  fs_io.py  fs_search.py  function_calling.py  guardrails.py  hotreload.py  limits_break.py  limits_lock.py  math_tools.py  mcp_server.py  media_adv.py  media_tools.py  ml_tools.py  monitoring.py  network.py  network_adv.py  operators.py  persistence.py  platform_registry.py  process_tools.py  (+18 more)
minxg/agents/: rag_system.py  react_agent.py
minxg/cap/: __init__.py  __main__.py  cli.py  manifest.py  registry.py  scanner.py
minxg/cat/: README.ja.md  README.ko.md  README.md  README.zh-TW.md  README.zh.md  __init__.py  functor.py  monad.py  morphism.py  operators_cat.py  yoneda.py
minxg/chaos/: README.ja.md  README.ko.md  README.md  README.zh-TW.md  README.zh.md  __init__.py  bifurcation.py  fractal.py  (+4 more)
multiligua_cli/: __init__.py  audio_tools.py  banner.py  cost_tracker.py  data_tools.py  doctor.py  experimental.py  extensions.py  features.py  file_selector.py  gateway_cli.py  hot_reload.py  i18n.py  image_tools.py  interactive.py  logger.py  main.py  memory.py  memory_system.py  memory_viz.py  model_compare.py  pdf_tools.py  platforms.py  providers.py  screen_cli.py  setup.py  skill_cli.py  suggest.py  syntax.py  terminal_chat.py  themes.py  tui_chat.py  tui_input.py  tui_polish.py  utils.py  video_tools.py  web_ui.py  wizard_smart.py  wizard_ui.py
multiling/: __init__.py  cli_bootstrap.py  docs_generator.py  ipc_server.py  minxg_core.py  model_tools.py  orchestrator.py  platform_cap.py  toolsets.py  workers_runner.py
py_workers/: __init__.py
rust_core/: Cargo.toml  build.sh
rust_core/src/: benchmark.rs  chaos.rs  compression.rs  crypto.rs  database.rs  driver.rs  ffi.rs  fiber.rs  forensics.rs  ga.rs  geolocation.rs  gpu.rs  image.rs  lib.rs  lib.rs.alt  math_ops.rs  mempool.rs  ml.rs  networking.rs  regex.rs  serialization.rs  signal.rs  simd.rs  sort.rs  str_ops.rs  symbdiff.rs  time_series.rs
scripts/: benchmark.py  find_shadowed_import_bugs.py  health_monitor.sh  setup.sh  strip_comments.py  test_all.sh  test_native.py
skills/: catalog.json
tests/: asan_harness.c  conftest.py  test_01_geometric_algebra.py  test_02_category_theory.py  test_03_information_geometry.py  test_04_algebraic_topology.py  test_05_dynamical_systems.py  test_06_fiber_bundles.py  test_07_operator_registry.py  test_08_config.py  test_09_persistence.py  test_advanced_features.py  test_agent_core.py  test_all.py  test_android_forge.py  test_anti_loop.py  test_apk_forge.py  test_audit_worker.py  test_cap.py  test_cap_extra.py  test_channel_discord.py  test_channel_slack.py  test_channel_telegram.py  test_cli_commands.py  test_cli_gateway.py  test_cli_main.py  test_cli_tui.py  test_delegate_tool.py  test_dev_forge.py  test_dev_shell.py  test_driver.py  test_driver_extra.py  test_e2e.py  test_experimental_cli.py  test_experimental_features.py  test_extension_cli_dispatch.py  test_extension_tool_discovery.py  test_extensions.py  test_file_safety.py  test_file_workers_hardening.py  (+42 more)
tools/: __init__.py  cronjob_tools.py  delegate_tool.py  file_tools.py  registry.py  skill_manager_tool.py  system_tools.py  terminal_tool.py  web_tools.py
ts_core/: README.md  package.json  run_tests.mjs  tsconfig.json
(+320 files in other folders)
