[package]
name = "minxg_rust_core"
version = "0.18.1"
edition = "2021"
license = "MIT"
description = "MINXG Rust performance core -- hot-path computations"

[lib]
name = "minxg_rust_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# No external deps -- pure stdlib for maximum portability
# PyO3 bindings added when Python FFI is needed
